ollama/kubernetes/manifest/base/ollama-gpu.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ollama
  namespace: open-webui
spec:
  serviceName: "ollama"
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama
        image: ollama/ollama:latest # Consider changing this tag if needed
        ports:
        - containerPort: 11434
        # Add the environment variables here
        resources:
          limits:
            nvidia.com/gpu: "1"
            cpu: "7000m"
            memory: "10Gi"
        volumeMounts:
        - name: ollama-volume
          mountPath: /root/.ollama
        tty: true
  volumeClaimTemplates:
  - metadata:
      name: ollama-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 30Gi
