ollama/kubernetes/manifest/base/anythingllm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anythingllm-service
  namespace: open-webui
spec:
  selector:
    app: anythingllm
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
