ollama/kubernetes/manifest/base/anythingllm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anythingllm-ingress
  namespace: open-webui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: anythingllm.192.168.1.20.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anythingllm-service
            port:
              number: 3001
