ollama/kubernetes/manifest/base/webui-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dashboard.192.168.1.20.nip.io
    secretName: dashboard-tls
  rules:
  - host: dashboard.192.168.1.20.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard-web
            port:
              number: 8000
